package main

import (
	"context"
	"encoding/json"
	"fmt"
	"net"
	"os"
	"os/exec"
	"os/signal"
	"strconv"
	"strings"
	"sync"
	"syscall"
	"time"

	"github.com/IBM/sarama"
	"go.uber.org/zap"
	"google.golang.org/grpc"

	"github.com/KATOmemorial/cronyx/api/proto"
	"github.com/KATOmemorial/cronyx/internal/common"
	"github.com/KATOmemorial/cronyx/internal/config"
	"github.com/KATOmemorial/cronyx/internal/discovery"
	"github.com/KATOmemorial/cronyx/internal/model"
)

// --- å…¨å±€ä»»åŠ¡ç®¡ç†å™¨ ---
// ç”¨æ¥å­˜å‚¨æ­£åœ¨è¿è¡Œçš„ä»»åŠ¡ï¼Œä»¥ä¾¿ Kill æŽ‰å®ƒä»¬
var (
	taskMap  = make(map[string]context.CancelFunc)
	taskLock sync.Mutex
)

// --- gRPC æœåŠ¡å®žçŽ° ---
type WorkerServer struct {
	proto.UnimplementedWorkerServiceServer
}

// StopTask å®žçŽ° gRPC æŽ¥å£ï¼šå¼ºæ€ä»»åŠ¡
func (s *WorkerServer) StopTask(ctx context.Context, req *proto.StopRequest) (*proto.StopReply, error) {
	targetID := req.TaskId // å¯èƒ½æ˜¯ "101-123456" (ç²¾ç¡®) æˆ– "101" (æ¨¡ç³Š)
	common.Log.Info("ðŸ”ª Received Kill Request", zap.String("target", targetID))

	killedCount := 0

	taskLock.Lock()
	defer taskLock.Unlock()

	for taskID, cancel := range taskMap {
		// é€»è¾‘ï¼šå¦‚æžœ taskMap é‡Œçš„ Key åŒ…å«äº† targetIDï¼Œå°±æ€æŽ‰
		// ä¾‹å¦‚ï¼šæ­£åœ¨è·‘ "101-17000"ï¼Œç›®æ ‡æ˜¯ "101"ï¼ŒåŒ¹é…æˆåŠŸï¼
		if strings.HasPrefix(taskID, targetID) {
			cancel()                // æ€ï¼
			delete(taskMap, taskID) // ç§»é™¤
			killedCount++
			common.Log.Warn("ðŸ’€ Task killed", zap.String("task_id", taskID))
		}
	}

	if killedCount == 0 {
		return &proto.StopReply{Success: false, Message: "No matching task found"}, nil
	}

	return &proto.StopReply{Success: true, Message: fmt.Sprintf("Killed %d tasks", killedCount)}, nil
}

func main() {
	// 1. åˆå§‹åŒ–
	config.LoadConfig("./configs/config.yaml")
	common.InitLogger()
	common.InitDB()

	// 2. æœåŠ¡æ³¨å†Œ
	ip, err := common.GetOutboundIP()
	if err != nil {
		common.Log.Fatal("Failed to get local IP", zap.Error(err))
	}

	// gRPC ç«¯å£
	grpcPort := config.AppConfig.Server.GrpcPort
	addr := fmt.Sprintf("%s:%d", ip, grpcPort)

	register := discovery.NewServiceRegister()
	err = register.Register("/cronyx/worker/"+addr, addr, 10)
	if err != nil {
		common.Log.Fatal("Failed to register to Etcd", zap.Error(err))
	}
	defer register.Close()
	common.Log.Info("Worker registered", zap.String("addr", addr))

	// --- 3. å¯åŠ¨ gRPC Server (æ–°å¢ž) ---
	go func() {
		lis, err := net.Listen("tcp", fmt.Sprintf(":%d", grpcPort))
		if err != nil {
			common.Log.Fatal("Failed to listen gRPC", zap.Error(err))
		}

		s := grpc.NewServer()
		// æ³¨å†ŒæœåŠ¡
		proto.RegisterWorkerServiceServer(s, &WorkerServer{})

		common.Log.Info("gRPC Server started", zap.Int("port", grpcPort))
		if err := s.Serve(lis); err != nil {
			common.Log.Fatal("Failed to serve gRPC", zap.Error(err))
		}
	}()

	// 4. å¯åŠ¨ Kafka æ¶ˆè´¹è€…
	saramaConfig := sarama.NewConfig()
	consumer, err := sarama.NewConsumer(config.AppConfig.Kafka.Brokers, saramaConfig)
	if err != nil {
		common.Log.Fatal("Failed to start Kafka consumer", zap.Error(err))
	}
	defer consumer.Close()

	partitionConsumer, err := consumer.ConsumePartition(config.AppConfig.Kafka.Topic, 0, sarama.OffsetNewest)
	if err != nil {
		common.Log.Fatal("Failed to consume partition", zap.Error(err))
	}
	defer partitionConsumer.Close()

	sigChan := make(chan os.Signal, 1)
	signal.Notify(sigChan, syscall.SIGINT, syscall.SIGTERM)

	// 5. æ¶ˆè´¹å¾ªçŽ¯
	go func() {
		for msg := range partitionConsumer.Messages() {
			var event common.TaskEvent
			json.Unmarshal(msg.Value, &event)

			common.Log.Info("âš¡ Executing Job", zap.String("task_id", event.TaskID))

			// --- æ ¸å¿ƒï¼šåˆ›å»ºå¯å–æ¶ˆçš„ Context ---
			// å¦‚æžœæ”¶åˆ° gRPC çš„ cancel()ï¼Œè¿™ä¸ª ctx.Done() å°±ä¼šå…³é—­
			ctx, cancel := context.WithCancel(context.Background())

			// å­˜å…¥ Map
			taskLock.Lock()
			taskMap[event.TaskID] = cancel
			taskLock.Unlock()

			// --- æ‰§è¡Œå‘½ä»¤ (ä½¿ç”¨ CommandContext) ---
			// è¿™ç§æ–¹å¼å¯åŠ¨çš„å‘½ä»¤ï¼Œä¸€æ—¦ ctx è¢« cancelï¼Œè¿›ç¨‹ä¼šè¢«è‡ªåŠ¨ Kill
			startTime := time.Now()
			cmd := exec.CommandContext(ctx, "/bin/sh", "-c", event.Command)
			output, err := cmd.CombinedOutput()
			endTime := time.Now()

			// æ‰§è¡Œå®Œï¼ˆæˆ–è€…è¢«KillåŽï¼‰ï¼Œä»Ž Map æ¸…ç†æŽ‰
			taskLock.Lock()
			delete(taskMap, event.TaskID)
			taskLock.Unlock()

			// åˆ¤æ–­æ˜¯è¢« Kill çš„è¿˜æ˜¯è‡ªç„¶å¤±è´¥çš„
			status := 1
			errMsg := ""
			if err != nil {
				status = 0
				// å¦‚æžœæ˜¯ context canceledï¼Œè¯´æ˜Žæ˜¯è¢«å¼ºæ€çš„
				if ctx.Err() == context.Canceled {
					errMsg = "Task killed by user"
					common.Log.Warn("Task killed successfully", zap.String("task_id", event.TaskID))
				} else {
					errMsg = err.Error()
					common.Log.Error("Execution failed", zap.Error(err))
				}
			} else {
				common.Log.Info("Execution success")
			}

			// JobID è§£æžé€»è¾‘ (ç®€åŒ–)
			var jobID int
			parts := strings.Split(event.TaskID, "-")
			if len(parts) > 0 {
				jobID, _ = strconv.Atoi(parts[0])
			}

			// å…¥åº“
			jobLog := model.JobLog{
				JobID:     uint(jobID),
				Command:   event.Command,
				Output:    string(output),
				Error:     errMsg,
				PlanTime:  event.Timestamp,
				StartTime: startTime.UnixMilli(),
				EndTime:   endTime.UnixMilli(),
				Status:    status,
			}
			common.DB.Create(&jobLog)
		}
	}()

	common.Log.Info("Worker is running...")
	<-sigChan
	common.Log.Warn("Worker shutting down...")
}
